# jdb

./: .gitignore  AGENTS.md  Cargo.toml  about.md  clippy.sh  cov.sh  docApi.js  nextest.toml  note.md  package-lock.json  package.json  test.sh  todo.md
autoscale_cuckoo_filter/: AGENTS.md  Cargo.toml  README.md  README.mdt  bench.autoscale.sh  bench.json  bench.sh  package.json  svg.js  table.js  todo.md
autoscale_cuckoo_filter/benches/: comparison.rs  fpp_compare.rs  gen_svg.rs  scalability.rs  table.rs
autoscale_cuckoo_filter/readme/: en.bench.md  en.md  zh.bench.md  zh.md
autoscale_cuckoo_filter/src/: base.rs  bits.rs  buckets.rs  cuckoo_filter.rs  lib.rs  scalable_cuckoo_filter.rs
autoscale_cuckoo_filter/tests/: regression.rs
cpu_bind/: Cargo.toml  README.md
cpu_bind/readme/: en.md  zh.md
cpu_bind/src/: lib.rs
cpu_bind/tests/: main.rs
cpu_load/: Cargo.toml  README.md
cpu_load/readme/: en.md  zh.md
cpu_load/src/: iter.rs  lib.rs
cpu_load/tests/: main.rs
file_lru/: Cargo.toml  README.md
file_lru/readme/: en.md  zh.md
file_lru/src/: lib.rs
gc_log/: Cargo.toml
gc_log/src/: count.rs  lib.rs
jdb/: Cargo.toml  bench.sh
jdb/benches/: perf.rs
jdb/proptest-regressions/: flush.txt  main.txt  recovery.txt
jdb/src/: batch.rs  conf.rs  db.rs  error.rs  jdb.rs  lib.rs  load.rs  merge.rs  ns.rs  ns_mgr.rs  order.rs  watch.rs
jdb/tests/: flush.rs  main.rs  merge.rs  recovery.rs  write_ops.rs
jdb_alloc/: AGENTS.md  Cargo.toml  README.md  todo.md
jdb_alloc/readme/: en.md  zh.md
jdb_alloc/src/: aligned.rs  consts.rs  error.rs  lib.rs
jdb_alloc/tests/: alloc.rs  main.rs  more_alloc.rs
jdb_api/: Cargo.toml
jdb_api/src/: client.rs  error.rs  lib.rs
jdb_api/tests/: main.rs
jdb_base/: Cargo.toml
jdb_base/src/: ckp.rs  compact.rs  discard.rs  entry.rs  file_lru.rs  flag.rs  fs.rs  fs_id.rs  head.rs  id.rs  lib.rs  load.rs  mem.rs  order.rs  pos.rs  query.rs  sorted_vec.rs
jdb_base/tests/: flag.rs  merge.rs  pos.rs
jdb_bench/: .gitignore  AGENTS.md  Cargo.toml  bench.js  bench.sh
jdb_bench/benches/: engine.rs  filter_bench.rs
jdb_bench/src/: corpus.rs  engine.rs  error.rs  keygen.rs  latency.rs  lib.rs  metrics.rs  runner.rs  zipf.rs
jdb_bench/tests/: bench_engines.rs  main.rs
jdb_bench_data/: AGENTS.md  Cargo.toml  init.sh
jdb_bench_data/src/: corpus.rs  error.rs  keygen.rs  lib.rs  mem.rs  stats.rs  workload.rs  zipf.rs
jdb_bench_data/tests/: main.rs
jdb_ckp/: AGENTS.md  Cargo.toml  README.md
jdb_ckp/readme/: en.md  zh.md
jdb_ckp/src/: ckp.rs  conf.rs  disk.rs  error.rs  lib.rs  load.rs  rewrite.rs  row.rs  state.rs
jdb_ckp/tests/: checkpoint.rs
jdb_comm/: Cargo.toml
jdb_comm/src/: config.rs  consts.rs  err.rs  error.rs  hash.rs  lib.rs  types.rs
jdb_comm/tests/: main.rs
jdb_compress/: Cargo.toml
jdb_compress/src/: lib.rs
jdb_compress/tests/: main.rs
jdb_conf/: Cargo.toml
jdb_conf/src/: lib.rs
jdb_flush/: Cargo.toml
jdb_flush/src/: lib.rs
jdb_flush/tests/: main.rs
jdb_fs/: AGENTS.md  Cargo.toml  Cross.toml  README.md  build.rs  test.js  test.linux.sh  test.sh  test.windows.sh  todo.md
jdb_fs/readme/: en.md  zh.md
jdb_fs/src/: add_ext.rs  atom_write.rs  auto_compact.rs  buf.rs  compact.rs  consts.rs  encode.rs  error.rs  file.rs  file_lru.rs  fs.rs  fs_id.rs  head.rs  kv.rs  lib.rs  load.rs  new_id.rs  parse.rs  push.rs  try_rm.rs
jdb_fs/tests/: add_ext.rs  atom_write.rs  buf_file.rs  compact.rs  fs.rs  head.rs  main.rs  try_rm.rs
jdb_fsst/: AGENTS.md  Cargo.toml  README.md  bench.sh  regress.js  svg.js
jdb_fsst/benches/: bench.rs  benched.js  conv.js  regress.html  regress.json
jdb_fsst/readme/: en.md  zh.md
jdb_fsst/speedup/: 01_批量解码优化.txt  readme.txt
jdb_fsst/src/: counter.rs  decode.rs  decoder.rs  dict.rs  dump.rs  encode.rs  encoder.rs  lib.rs  symbol.rs  table.rs  train.rs
jdb_fsst/tests/: fsst_ref.rs  test.rs
jdb_gc/: AGENTS.md  Cargo.toml
jdb_gc/readme/: en.md  zh.md
jdb_gc/src/: error.rs  gc.rs  lib.rs  log.rs  stat.rs  worker.rs
jdb_gc/tests/: main.rs  prop_marking.rs  prop_state_machine.rs
jdb_index/: Cargo.toml
jdb_index/src/: btree.rs  cursor.rs  error.rs  key.rs  lib.rs  merge.rs  node.rs  prefix.rs  tree.rs  view.rs
jdb_index/tests/: main.rs
jdb_layout/: Cargo.toml
jdb_layout/src/: blob.rs  checksum.rs  consts.rs  crc.rs  error.rs  lib.rs  page.rs  ptr.rs  wal.rs
jdb_layout/tests/: main.rs
jdb_level/: Cargo.toml
jdb_level/proptest-regressions/: refcount.txt
jdb_level/src/: calc.rs  ckp.rs  compact.rs  conf.rs  error.rs  handle.rs  level.rs  levels.rs  lib.rs  load.rs  meta.rs  multi.rs  read.rs  refcount.rs  size.rs  snapshot.rs  update.rs
jdb_level/tests/: main.rs  refcount.rs  sink.rs  snapshot.rs
jdb_lock/: Cargo.toml  README.md
jdb_lock/readme/: en.md  zh.md
jdb_lock/src/: error.rs  gc.rs  lib.rs  w.rs
jdb_lru/: AGENTS.md  Cargo.toml  README.md
jdb_lru/readme/: en.md  zh.md
jdb_lru/src/: cache.rs  lib.rs  lru.rs  no.rs
jdb_lru/tests/: main.rs
jdb_mem/: AGENTS.md  Cargo.toml  design.md
jdb_mem/proptest-regressions/: main.txt
jdb_mem/readme/: en.md  zh.md
jdb_mem/src/: disk.rs  error.rs  flush.rs  handle.rs  impl_trait.rs  iter.rs  lib.rs  map.rs  mem.rs  mems.rs  merge.rs
jdb_mem/tests/: consts.rs  main.rs  test_mem.rs
jdb_meta/: Cargo.toml
jdb_meta/src/: ckp.rs  error.rs  lib.rs  meta_li.rs  meta_with_auto_rm.rs
jdb_page/: Cargo.toml
jdb_page/src/: cache.rs  consts.rs  error.rs  lib.rs  page.rs  page_header.rs
jdb_page/tests/: main.rs
jdb_pef/: Cargo.toml  bench.sh  regress.js  run.sh  tune.sh
jdb_pef/benches/: bench.rs  history.json  lib.js  stats.json  svg.js  table.js  traits.rs
jdb_pef/examples/: main.rs  tune.rs
jdb_pef/readme/: en.bench.md  zh.bench.md
jdb_pef/src/: bits.rs  conf.rs  elias_fano.rs  iter.rs  lib.rs  pef.rs  utils.rs
jdb_pef/tests/: ef.rs  iter.rs  main.rs  pef.rs  rev_iter_test.rs  serialization.rs
jdb_pgm/: .gitignore  Cargo.toml  LICENSE  README.md  accuracy.json  bench.json  bench.sh  build_time.json  pk.sh  regress.js  svg.js  table.js
jdb_pgm/js/: common.js
(+573 files in other folders)
