
[package]
name = "autoscale_cuckoo_filter"
edition = "2024"
version = "0.5.1"
authors = ["js0-site <jssite@googlegroups.com>"]
description = "A variant of Cuckoo Filter whose size automatically scales as necessary (forked from sile/scalable_cuckoo_filter)"
homepage = "https://github.com/js0-site/jdb/tree/main/autoscale_cuckoo_filter"
repository = "https://github.com/js0-site/jdb"
readme = "README.md"
keywords = ["cuckoo-filter", "bloom-filter"]
categories = ["data-structures"]
license = "MIT"

[features]
serde_support = ["serde", "serde_bytes"]
serde_bytes = ["dep:serde_bytes"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = [
  "derive",
] }
gxhash = "3"
serde_bytes = { version = "0.11.19", optional = true }
fastrand = "2.3.0"

[dev-dependencies]
criterion = "0.8"
mimalloc = { version = "0.1", default-features = false }
sonic-rs = "0.5"
farmhash = "1.1"
cuckoofilter = { version = "0.5", features = ["farmhash"] }
scalable_cuckoo_filter = "0.5.1"
charming = { version = "0.6.0", features = ["ssr", "ssr-raster"] }
tabled = "0.20.0"
serde = { version = "1.0", features = ["derive"] }

[[bench]]
name = "scalability"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "table"
harness = false

[[bench]]
name = "gen_svg"
harness = false

[[bench]]
name = "fpp_compare"
harness = false
