[package]
name = "cpu_bind"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/cpu_bind"
description = "Bind threads to idlest CPU core / 将线程绑定到最空闲 CPU 核心"
keywords = ["cpu-affinity", "thread-binding", "cpu-load", "compio", "scheduling"]
categories = ["concurrency", "hardware-support", "os", "asynchronous", "development-tools"]
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { version = "0.17.0", features = ["time"] }
compio-runtime = "0.10.1"
core_affinity = "0.8.3"
cpu_load = { version = "0.1.6", path = "../cpu_load" }

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"