[package]
name = "cpu_load"
version = "0.1.6"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/cpu_load"
description = "Real-time CPU load monitoring with intelligent core selection / 实时 CPU 负载监控与智能核心选择"
keywords = ["cpu", "monitoring", "load-balancing", "async", "compio"]
categories = ["development-tools", "hardware-support", "asynchronous"]
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { version = "0.17.0", features = ["time"] }
defer-lite = "1.0.0"
static_init = "1.0.4"
sysinfo = "0.37.2"

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
