[package]
name = "gc_log"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/gc_log"
description = "gc_log"
keywords = []
categories = []
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio = { version = "0.17.0", features = ["io"] }
futures = "0.3.31"
jdb_base = { version = "0.1.1", path = "../jdb_base" }
jdb_fs = { version = "0.1.1", path = "../jdb_fs" }
zbin = { version = "0.1.4", path = "../zbin" }
zerocopy = { version = "0.8.33", features = ["derive"] }

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
