[package]
name = "jdb"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb"
description = "jdb"
keywords = ["database", "storage", "kv", "async", "embedded"]
categories = ["database", "asynchronous", "data-structures"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
aok = "0.1.18"
fastrand = "2.3.0"
log = "0.4.29"
log_init = "0.1.34"
proptest = "1.9.0"
static_init = "1.0.4"

[dev-dependencies.jdb_base]
path = "../jdb_base"
version = "0.1.0"

[dev-dependencies.compio]
version = "0.17.0"
features = ["macros"]

[dependencies]
bitcode = "0.6.9"
crc32fast = "1.5.0"
gxhash = "3.5.0"
hashlink = "0.11.0"
jdb_lru = { version = "0.1.4", path = "../jdb_lru" }
jdb_xorf = { version = "0.12.0", path = "../jdb_xorf", features = ["bitcode"] }
log = "0.4.29"
thiserror = "2.0.17"
zerocopy = "0.8.31"

[dependencies.compio]
version = "0.17.0"
features = ["runtime", "io", "macros"]

[dependencies.jdb_base]
version = "0.1.0"
path = "../jdb_base"

[dependencies.jdb_val]
version = "0.1.0"
path = "../jdb_val"
