[package]
name = "jdb"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb"
description = "jdb"
keywords = []
categories = []
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core = "0.3.31"
jdb_base = { version = "0.1.1", path = "../jdb_base" }
jdb_ckp = { version = "0.1.3", path = "../jdb_ckp" }
jdb_fs = { version = "0.1.1", path = "../jdb_fs" }
jdb_mem = { version = "0.1.0", path = "../jdb_mem" }
jdb_sstable = { version = "0.1.0", path = "../jdb_sstable" }
jdb_val = { version = "0.1.0", path = "../jdb_val" }
log = "0.4.29"
thiserror = "2.0.17"
zbin = { version = "0.1.4", path = "../zbin" }

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
compio-runtime = "0.10.1"
futures-executor = "0.3.31"
futures-util = "0.3.31"
log = "0.4.29"
log_init = "0.1.34"
proptest = "1.9.0"
static_init = "1.0.4"
tempfile = "3.24.0"
