[package]
name = "jdb_alloc"
version = "0.1.4"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_alloc"
description = "Aligned memory allocator for Direct I/O / Direct I/O 对齐内存分配器"
keywords = ["allocator", "direct-io", "aligned", "buffer", "zero-copy"]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
compio-buf = "0.7.2"
thiserror = "2"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]