[package]
name = "jdb_base"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_base"
description = "jdb_base"
keywords = [ ]
categories = [ ]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"

[dev-dependencies.compio]
version = "0.17.0"
features = [ "macros" ]

[dependencies]
oneshot = "0.1.11"

[dependencies.zerocopy]
version = "0.8.33"
features = [ "derive", "simd" ]
