[package]
name = "wlog_bench"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/wlog.git"
homepage = "https://github.com/js0-site/wlog/tree/main/wlog_bench"
description = "wlog_bench"
keywords = ["benchmark", "database", "performance", "testing"]
categories = ["development-tools::profiling", "database", "development-tools::testing"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]
wlog = [ "dep:wlog" ]
fjall = [ "dep:fjall" ]
rocksdb = [ "dep:rocksdb" ]
all = [ "fjall", "rocksdb", "wlog" ]

[dependencies]
fastrand = "2.3.0"
hdrhistogram = "7.5.4"
sonic-rs = "0.5.6"
thiserror = "2.0.17"
humansize = "2.1.3"
gxhash = "3.5.0"

[dependencies.jdb_bench_data]
version = "0.1.2"
path = "../jdb_bench_data"

[dependencies.serde]
version = "1.0.228"
features = [ "derive" ]

[dependencies.fjall]
version = "3.0.1"
optional = true

[dependencies.rocksdb]
version = "0.24.0"
optional = true

[dependencies.compio]
version = "0.17.0"
features = [ "macros" ]

[dependencies.wlog]
version = "0.1.0"
path = "../wlog"
optional = true

[dependencies.jdb_base]
version = "0.1.1"
path = "../jdb_base"

[dependencies.autoscale_cuckoo_filter]
version = "0.5.17"

[dependencies.cuckoofilter]
version = "0.5.0"
features = [ "farmhash" ]

[dev-dependencies]
aok = "0.1.18"
humansize = "2.1.3"
log = "0.4.29"
log_init = "0.1.34"
proptest = "1.9.0"
sonic-rs = "0.5.6"
static_init = "1.0.4"

[dev-dependencies.compio]
version = "0.17.0"
features = [ "macros" ]

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "filter_bench"
harness = false
