[package]
name = "jdb_ckp"
version = "0.1.3"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_ckp"
description = "Async checkpoint manager for WAL recovery / 异步检查点管理器，加速 WAL 恢复"
keywords = [ "checkpoint", "wal", "recovery", "database", "async" ]
categories = [ "database", "asynchronous", "filesystem" ]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
thiserror = "2.0.17"
futures = "0.3.31"
zbin = { version = "0.1.4", path = "../zbin" }

[dependencies.jdb_base]
path = "../jdb_base"
version = "0.1.1"

[dependencies.jdb_fs]
version = "0.1.1"
path = "../jdb_fs"

[dependencies.zerocopy]
version = "0.8.33"
features = [ "derive" ]

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
compio-runtime = "0.10.1"
tempfile = "3.24.0"
