[package]
name = "jdb_fs"
version = "0.2.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_fs"
description = "jdb_fs"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
add_ext = "0.1.2"
compio = "0.17.0"
compio-fs = "0.10.0"
compio-runtime = { version = "0.10.1", features = ["time"] }
crc32fast = "1.5.0"
log = "0.4.29"
memchr = "2.7.6"
thiserror = "2.0.17"
zbin = { version = "0.1.4", path = "../zbin" }
zerocopy = { version = "0.8.33", features = ["derive"] }

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
tempfile = "3.24.0"

[dev-dependencies.compio]
version = "0.17.0"
features = ["macros"]

[build-dependencies]
anyhow = "1.0.100"
