[package]
name = "jdb_fsst"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_fsst"
description = "Fast Static Symbol Table (FSST) compression for string data / 针对字符串数据优化的快速静态符号表压缩"
keywords = ["compression", "fsst", "database", "search", "encoding"]
categories = ["compression", "data-structures", "database-implementations", "algorithms", "encoding"]
readme = "README.md"

[features]
default = []
bench_all = ["bench_jdb_fsst", "bench_fsst"]
bench_jdb_fsst = []
bench_fsst = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitcode = "0.6.9"
fastrand = "2"
gxhash = "3.5.0"

[dev-dependencies]
aok = "0.1.18"
comfy-table = "7.2.2"
compio = { version = "0.17.0", features = ["macros"] }
criterion = "0.8.1"
fsst = "1.0.1"
human-size = "0.4.3"
log = "0.4.29"
log_init = "0.1.34"
rand = "0.9.2"
static_init = "1.0.4"

[[bench]]
name = "bench"
harness = false
