[package]
name = "jdb_gc"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_gc"
description = "jdb_gc"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.11.0"
jdb_fs = { version = "0.1.4", path = "../jdb_fs" }
jdb_page = { version = "0.1.0", path = "../jdb_page" }
jdb_table = { version = "0.1.0", path = "../jdb_table" }
jdb_trait = { version = "0.2.0", path = "../jdb_trait" }
jdb_vlog = { version = "0.1.0", path = "../jdb_vlog" }
roaring = "0.11.3"
thiserror = "2.0.17"

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
fastrand = "2.3.0"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
