[package]
name = "jdb_gc"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_gc"
description = "WAL garbage collection with LZ4 compression / WAL 垃圾回收与 LZ4 压缩"
keywords = ["wal", "gc", "lz4", "compression", "database"]
categories = ["database", "filesystem", "compression"]
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
jdb_base = { version = "0.1.0", path = "../jdb_base" }
lz4_flex = "0.12.0"

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
