[package]
name = "jdb_gc"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/jdb.git"
homepage = "https://github.com/js0-site/jdb/tree/main/jdb_gc"
description = "WAL garbage collection with LZ4 compression / WAL 垃圾回收与 LZ4 压缩"
keywords = [ "wal", "gc", "lz4", "compression", "database" ]
categories = [ "database", "filesystem", "compression", "structures", "storage" ]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]

[dependencies]
lz4_flex = "0.12.0"

[dependencies.jdb_base]
version = "0.1.1"
path = "../jdb_base"

[dependencies.jdb_fs]
version = "0.1.1"
path = "../jdb_fs"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"

[dev-dependencies.compio]
version = "0.17.0"
features = [ "macros" ]
