[package]
name = "jdb_index"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/jdb.git"
homepage = "https://github.com/js0/jdb/tree/main/jdb_index"
description = "jdb_index"
keywords = []
categories = []
readme = "README.md"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core = "0.3.31"
jdb_base = { version = "0.1.1", path = "../jdb_base" }
jdb_level = { version = "0.1.0", path = "../jdb_level" }
jdb_mem = { version = "0.1.0", path = "../jdb_mem" }

[dev-dependencies]
aok = "0.1.18"
compio = { version = "0.17.0", features = ["macros"] }
log = "0.4.29"
log_init = "0.1.34"
static_init = "1.0.4"
